--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     as a software engineer to kick start my career in software engineering.
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1wmKETpP9z99onSVd2ecERCyvu0d6LT3B/view?usp=sharing" target="new" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -57,7 +57,7 @@
                         (Spring and Laravel), I am very good communicator and great team player who takes responsibilities solidly. 
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="https://drive.google.com/file/d/1wmKETpP9z99onSVd2ecERCyvu0d6LT3B/view?usp=sharing" target="_blank" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -130,9 +130,13 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">July 2018 - August 2018</p>
-                    <h5>Social Media Intern<span> - British Council Egypt</span></h5>
+                    <h5>Information Technology Intern<span> - British Council Egypt</span></h5>
                     <p>
-                        I was a social media Intern for one week and an IT intern for another week in the British Council Egypt.
+                        I was an IT intern in the British Council Egypt.
+                        We have taken multiple sessions about soft skills and computer skills,
+                        Worked at multiple tasks like data entry and organizing data on Excel,
+                        sending emails, Responded to customers questions on social media and
+                        I was checking the projectors functionalities of the classes.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -210,12 +214,25 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port5.jpg" alt="">
+                        <img src="img/see_posts.gif">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Instagram Clone</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/AdelBenAshraf/instagram_clone" target="new" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/showing.gif">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Banker's Algorithm</h3>
+                        <div class="icons">
+                            <a href="https://github.com/AdelBenAshraf/OS-deadlock-avoidance-banker-algorithm" target="new" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -232,14 +249,12 @@
                     <div class="blog">
                         <img src="img/port6.jpg" alt="">
                         <div class="blog-text">
-                            <a href="https://www.google.com" target="_blank">
+                            <a href="#" target="_blank">
                                 <h4>
-                                    My First Blog
+                                    
                                 </h4>
                             </a>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
                             </p>
                         </div>
                     </div>
@@ -255,7 +270,7 @@
                     <div class="left-contact">
                         <h4>Contact me here</h4>
                         <p>
-                            I you would like to contact me, please fill the form below and I will get back to you as soon as possible.
+                            You can reach me through any of the following ways: 
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
@@ -315,26 +330,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="right-contact">
-                        <form action="" class="contact-form">
-                            <div class="input-control i-c-2">
-                                <input type="text" required placeholder="YOUR NAME">
-                                <input type="email" required placeholder="YOUR EMAIL">
-                            </div>
-                            <div class="input-control">
-                                <input type="text" required placeholder="ENTER SUBJECT">
-                            </div>
-                            <div class="input-control">
-                                <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
-                            </div>
-                            <div class="submit-btn">
-                                <a href="#" class="main-btn">
-                                    <span class="btn-text">Download CV</span>
-                                    <span class="btn-icon"><i class="fas fa-download"></i></span>
-                                </a>
-                            </div>
-                        </form>
-                    </div>
+                    
                 </div>
             </div>
         </section>
