--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     as a software engineer to kick start my career in software engineering.
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1wmKETpP9z99onSVd2ecERCyvu0d6LT3B/view?usp=sharing" target="new" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1B0zZ5qLw8-FybmQppXWgsGIzaI86SNzY/view?usp=sharing" target="new" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -57,7 +57,7 @@
                         (Spring and Laravel), I am very good communicator and great team player who takes responsibilities solidly. 
                     </p>
                     <div class="btn-con">
-                        <a href="https://drive.google.com/file/d/1wmKETpP9z99onSVd2ecERCyvu0d6LT3B/view?usp=sharing" target="_blank" class="main-btn">
+                        <a href="https://drive.google.com/file/d/1B0zZ5qLw8-FybmQppXWgsGIzaI86SNzY/view?usp=sharing" target="_blank" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -302,7 +302,7 @@
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fas fa-user-graduate"></i>
+                                    <i class="fa fa-phone"></i>
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
